Create, update and delete reviews for products and stores

--- a/public/main.html
+++ b/public/main.html
@@ -108,7 +108,7 @@
                   </li>
                </ul>
                <!-----------CODE BELLOW ONLY FOR SPECIFIC STORE PAGE-------------->
-               <img src="imagens/dev/lojas/boutiqueragazza.jpg" alt="" class="side-nav__store__img" />
+               <!-- <img src="imagens/dev/lojas/boutiqueragazza.jpg" alt="" class="side-nav__store__img" />
                <button class="side-nav__chatbtn">
                   <svg class="side-nav__icon">
                      <use xlink:href="imagens/dev/sprite2.svg#icon-message"></use>
@@ -127,7 +127,7 @@
                      <use xlink:href="imagens/dev/sprite.svg#icon-log-out"></use>
                   </svg>
                   <span>Sair</span>
-               </button>
+               </button> -->
                <!------------------------------------------------------------------->
 
                <!-----------CODE BELLOW ONLY FOR USER SETTINGS PAGE-------------->
@@ -159,8 +159,44 @@
             </nav>
          </div>
 
-         <main class="main">
-            <!------------------Login for users-------------------------------->
+
+         <!-----------------------------Reviews section--------------------------------->
+         <!-- <div class="reviews__container">
+
+            <div class="user-reviews">
+               <figure class="review">
+                  <figcaption class="review__user">
+                     <img src="./imagens/dev/usuarios/mariarosa1.jpeg" alt="" class="review__photo" />
+                     <div class="review__user-box">
+                        <p class="review__user-name">Maria Rosa</p>
+                        <p class="review__user-date">23 De Março 2020</p>
+                     </div>
+                     <div class="review__rating">9.3</div>
+                  </figcaption>
+                  <blockquote class="review__text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi eaque eveniet dicta,
+                       em ipsum dolor sit amet consectetur adipisicing elit. Dolor animi eaque eveniet dicta,
+                        soluta quas minimaLorem ipsum dolosoluta quas minimaLorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi eaque eveniet dicta,
+                        soluta quas minimaLorem ipsum dolor sit amet consectetur adipisicing elit. Dolor animi eaque eveniet dicta,
+                        sol
+                  </blockquote>
+               </figure>
+               <button class="btn-inline">Mostrar todos <span>&rarr;</span></button>
+            </div>
+         </div>
+         </div> -->
+         
+
+         <!----------------------------------------------------------------------------->
+
+
+
+
+
+
+<!------------------Login for users-------------------------------->
+         <!-- <main class="main">
+            
             <div class="login__form">
                <img src="imagens/Lalitaa/Lalitaa_logo_transparent.png" alt="" class="login__form__header" />
                <form class="form form--login" action="#">
@@ -191,7 +227,7 @@
                   </div>
                </form>
                <a class="btn signup__btn">Criar conta</a>
-            </div>
+            </div>-->
             <!------------------------------------------------------------------->
 
             <!------------------------Sign Up-------------------------->
@@ -1598,14 +1634,14 @@
       </div>
 
       <!----------------------only for signup--------------------->
-      <script>
+      <!-- <script>
          var input = document.querySelector('#numeroTelemovel');
          intlTelInput(input, {
             onlyCountries: ['AO'],
             initialCountry: 'AO',
             utilsScript: 'intl-tel-input-master/build/js/utils.js'
          });
-      </script>
+      </script> -->
       <!---------------------------------------------------------->
    </body>
 </html>
