Before socket.io, including scripts on base.pug, serverChat.js,chatClient.js  and socket on server.js

--- a/public/main.html
+++ b/public/main.html
@@ -107,6 +107,18 @@
                      </a>
                   </li>
                </ul>
+
+               <!--------------------Code bellow for Private CHAT------------------------->
+               <!-- <img src="imagens/dev/usuarios/mateus.jpg" alt="" class="side-nav__store__img" />
+               <button class="side-nav__chat--apagar">
+                  <svg class="side-nav__icon">
+                     <use xlink:href="imagens/dev/sprite.svg#icon-trash-2"></use>
+                  </svg>
+                  <span>Apagar Conversa</span>
+               </button> -->
+
+               <!------------------------------------------------------------------->
+
                <!-----------CODE BELLOW ONLY FOR SPECIFIC STORE PAGE-------------->
                <!-- <img src="imagens/dev/lojas/boutiqueragazza.jpg" alt="" class="side-nav__store__img" />
                <button class="side-nav__chatbtn">
@@ -159,6 +171,102 @@
             </nav>
          </div>
 
+         <!------------------------------Chat all room---------------------------------->
+         <!-- <div class="chat__container">
+            <a href="#" class="chat__container__link">
+               <div class="chat__contact">
+                  <img
+                     src="./imagens/dev/usuarios/mateus.jpg"
+                     alt=""
+                     class="chat__contact__photo chat__contact__photo--online"
+                  />
+                  <span class="chat__contact--name">Mateus Neto</span>
+               </div>
+            </a>
+
+            <a href="#" class="chat__container__link">
+               <div class="chat__contact">
+                  <img
+                     src="./imagens/dev/usuarios/Raquel.jpg"
+                     alt=""
+                     class="chat__contact__photo chat__contact__photo--offline"
+                  />
+                  <span class="chat__contact--name">Raquel Neto</span>
+               </div>
+            </a>
+
+            <a href="#" class="chat__container__link">
+               <div class="chat__contact">
+                  <img
+                     src="./imagens/dev/usuarios/mariarosa1.jpeg"
+                     alt=""
+                     class="chat__contact__photo chat__contact__photo--online"
+                  />
+                  <span class="chat__contact--name">Maria Rosa</span>
+               </div>
+            </a>
+
+            <a href="#" class="chat__container__link">
+               <div class="chat__contact">
+                  <img
+                     src="./imagens/dev/lojas/boutiqueragazza.jpg"
+                     alt=""
+                     class="chat__contact__photo chat__contact__photo--online"
+                  />
+                  <span class="chat__contact--name">Boutique Ragazza</span>
+               </div>
+            </a>
+
+            <a href="#" class="chat__container__link">
+               <div class="chat__contact">
+                  <img
+                     src="./imagens/dev/usuarios/kayra.jpg"
+                     alt=""
+                     class="chat__contact__photo chat__contact__photo--online"
+                  />
+                  <span class="chat__contact--name">Kayra Rafaela</span>
+               </div>
+            </a>
+            <div class="chat__group"></div>
+         </div> -->
+         <!----------------------------------------------------------------------------->
+
+         <!------------------------------Private Chat---------------------------------->
+         <div class="private__chat__container">
+            <div class="messages">
+               <ul class="messages__list">
+                  <li class="messages__list--info">Conversando com Mateus</li>
+                  <li class="messages__list--sent">Olá como estas ?</li>
+                  <li class="messages__list--received">Estou bem e tu ?</li>
+                  <li class="messages__list--received">Onde estas ?</li>
+                  <li class="messages__list--sent">Em casa</li>
+                  <li class="messages__list--sent">Olá como estas ?</li>
+                  <li class="messages__list--received">Estou bem e tu ?</li>
+                  <li class="messages__list--received">Onde estas ?</li>
+                  <li class="messages__list--sent">Em casa</li>
+                  <li class="messages__list--sent">Olá como estas ?</li>
+                  <li class="messages__list--received">Estou bem e tu ?</li>
+                  <li class="messages__list--received">Onde estas ?</li>
+                  <li class="messages__list--sent">Em casa</li>
+                  <li class="messages__list--sent">Olá como estas ?</li>
+                  <li class="messages__list--received">Estou bem e tu ?</li>
+                  <li class="messages__list--received">Onde estas ?</li>
+                  <li class="messages__list--sent">Em casa</li>
+                  <li class="messages__list--info">Mateus saiu da conversa</li>
+               </ul>
+            </div>
+
+            <div class="message__input">
+               <input type="text" class="message__input--box" />
+               <button class="message__input__sendBtn">
+                  <span>Enviar</span>
+                  <svg class="message__input__sendBtn--icon">
+                     <use xlink:href="imagens/dev/sprite.svg#icon-send"></use>
+                  </svg>
+               </button>
+            </div>
+         </div>
+         <!----------------------------------------------------------------------------->
 
          <!-----------------------------Reviews section--------------------------------->
          <!-- <div class="reviews__container">
@@ -185,16 +293,10 @@
             </div>
          </div>
          </div> -->
-         
 
          <!----------------------------------------------------------------------------->
 
-
-
-
-
-
-<!------------------Login for users-------------------------------->
+         <!------------------Login for users-------------------------------->
          <!-- <main class="main">
             
             <div class="login__form">
@@ -228,10 +330,10 @@
                </form>
                <a class="btn signup__btn">Criar conta</a>
             </div>-->
-            <!------------------------------------------------------------------->
+         <!------------------------------------------------------------------->
 
-            <!------------------------Sign Up-------------------------->
-            <!-- <div class="login__form">
+         <!------------------------Sign Up-------------------------->
+         <!-- <div class="login__form">
                <img src="imagens/Lalitaa/Lalitaa_logo_transparent.png" alt="" class="login__form__header" />
                <form class="form form--login" action="#">
                   <div class="form__group">
@@ -285,8 +387,8 @@
                   </div>
                </form>
             </div> -->
-            <!------------------------------------------------------------------->
-         </main>
+         <!------------------------------------------------------------------->
+         <!--</main>
          -->
 
          <!-------------------------User settings Dasboard-------------------->
